[package]
name = "battleships"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.6.18", features = ["ws"] }
uuid = { version = "1.3.2", features = ["v4"] }
